# rust-opengl-graphics

./: Cargo.toml  README.md
res/glsl/: basic.fs.glsl  basic.vs.glsl  texture.fs.glsl  texture.vs.glsl  triangle.fs.glsl  triangle.vs.glsl
src/: apps.rs  buffer.rs  core.rs  framework.rs  main.rs  mesh.rs  shader.rs  utils.rs  vertex.rs
src/apps/: hello_triangle.rs  imgui.rs  minimal.rs  texture_mapping.rs  triangle.rs
src/core/: app.rs  buffer.rs  common.rs  framework.rs  mesh.rs  shader.rs  texture.rs  vertex.rs
src/utils/: anim2d.rs  sprite.rs
