[package]
name = "rust-graphics"
version = "0.1.0"
authors = ["ayase <paper.airplane01@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glfw = "0.41.0"
cgmath = "0.18.0"
c_str_macro = "1.0.3"
image = "0.23.14"
imgui = "0.7.0"
imgui-glfw-rs = "0.4.1"
imgui-opengl-renderer = "0.11.0"
